<resources>
	<string name="about_dialog_close">Close</string>
	<string name="about_dialog_text" translatable="false">\n ©2014 M. Dietrich\n ©2009 Robert.Developer\n Osmdroid by Nicolas Gramlich\n App- and some other icons by M. Dietrich\n With the assistance of\n Dmytro Sandu\n Snake Joe\n Christoffer Blindheim\n Translators\n Vitek Fedra CZ\n Blast IT\n Mike DE\n All rights reserved\n \n Questions, sentences mail to tabulae@pyneo.org\n \n How to and FAQ you can find on http://pyneo.org/tabulae/\n</string>
	<string name="about_dialog_whats_new">What\'s new&#8230;</string>
	<string name="activity">Activity</string>
	<string name="add_shadow_box">Add shadow</string>
	<string name="app_name" translatable="false">Tabulae</string>
	<string name="app_user_id" translatable="false"></string>
	<string name="app_user_label" translatable="false">Pyneo.Org</string>
	<string name="auto_follow_disabled">Center Disabled</string>
	<string name="auto_follow_enabled">Center Enabled</string>
	<string name="avg_moving_speed">AVG MOVING SPEED</string>
	<string name="avg_pace">AVG PACE</string>
	<string name="avg_speed">AVG SPEED</string>
	<string name="azimuth">Azimuth</string>
	<string name="back">Back</string>
	<string name="blank" translatable="false"></string>
	<string name="btn_clear_cache_title">Clear cache</string>
	<string name="btn_pause">Pause</string>
	<string name="btn_start">Start</string>
	<string name="btn_stop">Stop</string>
	<string name="clear">Clear</string>
	<string name="dashboard_message_cant_remove_last_indicator">Can\'t remove last indicator</string>
	<string name="dashboard_title_gps_accuracy">Accuracy</string>
	<string name="dashboard_title_gps_altitude">Altitude</string>
	<string name="dashboard_title_gps_bearing">Bearing</string>
	<string name="dashboard_title_gps_latitude">Latitude</string>
	<string name="dashboard_title_gps_longitude">Longitude</string>
	<string name="dashboard_title_gps_provider">Loc Provider</string>
	<string name="dashboard_title_gps_speed">Speed</string>
	<string name="dashboard_title_gps_time">Timestamp</string>
	<string name="dashboard_title_map_center_lat">Center Latitude</string>
	<string name="dashboard_title_map_center_lon">Center Longitude</string>
	<string name="dashboard_title_map_name">Map Name</string>
	<string name="dashboard_title_map_zoom">Zoom</string>
	<string name="dashboard_title_target_bearing">Bearing2Target</string>
	<string name="dashboard_title_target_distance">Distance2Target</string>
	<string name="dialog_color_picker">Color Picker</string>
	<string name="distance">Distance</string>
	<string name="dist">Distance</string>
	<string name="downloader_notif_text">Downloading in progress</string>
	<string name="downloader_notif_ticket">Downloading started&#8230;</string>
	<string name="downloader_notif_title">Tabulae tile downloader</string>
	<string name="duration">Duration</string>
	<string name="error_diskio">Can\'t open file %s Disk IO error</string>
	<string name="error">ERROR&#8230;</string>
	<string name="error_illegalmapid">Illegal map ID \'%s\'. Recommended clearing index data in settings.</string>
	<string name="error_other" translatable="false">%s</string>
	<string name="error_send">Generate report</string>
	<string name="error_text">After the last start the software problem has forced Tabulae to be closed unexpectedly. Please, send the error report to the author of the program. Click Generate report, you can read the message before it is sent.</string>
	<string name="error_title">Error report</string>
	<string name="file_name">File name:</string>
	<string name="FileName">Import from KML, GPX file</string>
	<string name="ft" translatable="false">ft</string>
	<string name="hiddencategory">Hide POI of this category</string>
	<string name="hidden">Hidden</string>
	<string name="Import">Import</string>
	<string name="kmh" translatable="false">km/h</string>
	<string name="km" translatable="false">km</string>
	<string name="line_color">Line color</string>
	<string name="line_width">Line width</string>
	<string name="load_tiles_to_online_cache">Load tiles to the online cache</string>
	<string name="max_elevation">MAX ELEVATION</string>
	<string name="max_speed">MAX SPEED</string>
	<string name="menu_about">About</string>
	<string name="menu_add">Add</string>
	<string name="menu_add_dualmap">Map + overlay pair</string>
	<string name="menu_add_ownsourcemap">Custom map source</string>
	<string name="menu_addpoi">Add POI</string>
	<string name="menu_add_target_point">Add target point</string>
	<string name="menu_area_selector">Make available offline</string>
	<string name="menu_categorylist">Category</string>
	<string name="menu_compass">Compass</string>
	<string name="menu_dashboard_add_line">Add line</string>
	<string name="menu_deleteall">Delete All</string>
	<string name="menu_delete">Delete</string>
	<string name="menu_done">Done</string>
	<string name="menu_doNotSave">Revert</string>
	<string name="menu_downloadprepared">Download maps prepared</string>
	<string name="menu_edit">Edit</string>
	<string name="menu_exit">Exit</string>
	<string name="menu_exporttogpx">Export to GPX file</string>
	<string name="menu_exporttokml">Export to KML file</string>
	<string name="menu_findthemap">Find the map</string>
	<string name="menu_goto">Go to POI</string>
	<string name="menu_goto_track">Go to Track</string>
	<string name="menu_gpsstatus" translatable="false">GPS Status</string>
	<string name="menu_hide">Hide</string>
	<string name="menu_hide_overlay">Hide overlay</string>
	<string name="menu_i_am_here">I am here</string>
	<string name="menu_import">Import</string>
	<string name="menu_join">Join tracks</string>
	<string name="menu_layers">Layers</string>
	<string name="menu_mapselector">Maps</string>
	<string name="menu_measure">Measure</string>
	<string name="menu_mylocation">Center</string>
	<string name="menu_poilist">POI</string>
	<string name="menu_reload">Reload screen tiles</string>
	<string name="menu_remove_target_point">Remove target point</string>
	<string name="menu_routes">Routes</string>
	<string name="menu_search">Search</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_share">Share</string>
	<string name="menu_view">View</string>
	<string name="menu_show_dashboard">Dashboard</string>
	<string name="menu_showinfo">Show info bubble</string>
	<string name="menu_showlineinfo">Show info under line</string>
	<string name="menu_show">Show</string>
	<string name="menu_sort_category">By category</string>
	<string name="menu_sort_coord">By coordinates</string>
	<string name="menu_sort_date">By date</string>
	<string name="menu_sort_name">By name</string>
	<string name="menu_sort">Sort</string>
	<string name="menu_stat">Statistics</string>
	<string name="menu_title_overlays">Overlays</string>
	<string name="menu_tools">Tools</string>
	<string name="menu_toradar">To Radar</string>
	<string name="menu_tracks">Tracks</string>
	<string name="menu_undo">Undo</string>
	<string name="mercator_ellipsoid" translatable="false">Mercator Ellipsoid</string>
	<string name="mercator_spheroid" translatable="false">Mercator Spheroid</string>
	<string name="message_cantstarttrackwriter">Can\'t start TrackWriter because can\'t write track to </string>
	<string name="message_corruptindex">You have corrupt index data. I recommend to clear index data in settings.</string>
	<string name="message_error">Error: %s</string>
	<string name="message_geodata_notavailable">Data on SD card is not available. Operation cannot be performed.</string>
	<string name="message_gpsdisabled">Satellite-location is disabled. Trying to use wireless network to determine your location&#8230;</string>
	<string name="message_lastknownlocation">Satellite- and Networklocation is disabled. Showing last known location&#8230;</string>
	<string name="message_locationunavailable">Satellite- and Networklocation is disabled. Your current location is temporarily unavailable&#8230;</string>
	<string name="message_nogpsstatus">GPS Status not found. Please install it!</string>
	<string name="message_noradar">Radar application not found. Please install it! You can install GPS Status or Radar from the Market.</string>
	<string name="message_poiexported">The POIs exported to %s</string>
	<string name="message_saved">Item saved</string>
	<string name="message_trackexported">The track is exported to </string>
	<string name="message_updateminmax">Update min max zoom data of map file&#8230;</string>
	<string name="message_wait">Wait a moment, please&#8230;</string>
	<string name="min_elevation">MIN ELEVATION</string>
	<string name="minkm" translatable="false">min/km</string>
	<string name="MinZoom">Show poi since the zoom (0..23)</string>
	<string name="ml" translatable="false">ml</string>
	<string name="mnm" translatable="false">.mnm</string>
	<string name="moving_time">MOVING TIME</string>
	<string name="m" translatable="false">m</string>
	<string name="mymap" translatable="false">MyMapFileName</string>
	<string name="next">Next</string>
	<string name="no_inet_conn">No internet connection&#8230;</string>
	<string name="no_items">Your search did not match any items</string>
	<string name="no">No</string>
	<string name="no_traffic">On this zoom traffic info are unavailable</string>
	<string name="offset_button_open_map">Set offset on the map</string>
	<string name="offsetEW">East/West offset, meter</string>
	<string name="offset_info">Use one finger to change the offset. Use two fingers to move the map.</string>
	<string name="offsetNS">North/South offset, meter</string>
	<string name="offset_text">Offset</string>
	<string name="open">Open map</string>
	<string name="osgb36" translatable="false">OSGB 36 British national grid reference system</string>
	<string name="overwrite_existing_file">Overwrite existing file</string>
	<string name="overwrite_existing_tiles">Overwrite existing tiles in the file</string>
	<string name="PoiAlt">Altitude</string>
	<string name="PoiCategoryTitle">Category</string>
	<string name="PoiDescr">Description</string>
	<string name="PoiIcon">Icon</string>
	<string name="PoiLat">Latitude</string>
	<string name="PoiLon">Longitude</string>
	<string name="points_cnt">POINTS</string>
	<string name="poi">POI</string>
	<string name="PoiTitle">Title</string>
	<string name="pref_accuracy">Accuracy indicator</string>
	<string name="pref_accuracy_summary">Show blue disk indicator like Google Map</string>
	<string name="pref_addmixmap">Add map</string>
	<string name="pref_arrow_icon">Direction cursor</string>
	<string name="prefcat_main_indexing">Indexing</string>
	<string name="prefcat_main_look">Look &amp; Feel</string>
	<string name="prefcat_main_maps">Maps</string>
	<string name="prefcat_main_misc">Misc</string>
	<string name="prefcat_main_poi">POI</string>
	<string name="prefcat_main_predefinedmaps">Maps</string>
	<string name="prefcat_main_predefinedoverlays">Overlays</string>
	<string name="prefcat_main_trackwriter">Track writer</string>
	<string name="pref_circle_distance">Distance rings</string>
	<string name="pref_circle_distance_summary">Rings appear around your location that show distance like scale indicator</string>
	<string name="pref_coordformat">Coordinates format</string>
	<string name="pref_coordformat_summary">Latitude, longitude format for display</string>
	<string name="pref_crosshair">Crosshair on centre</string>
	<string name="pref_crosshair_summary">Show litle crosshair on centre of the map</string>
	<string name="pref_custommap_dialogmessage">For example:\n http://c.tile.openstreetmap.org/{z}/{x}/{y}.png\n Addition to the obvious {z}, {x}, {y} you can use {galileo} for Google maps\n Write me to email if you need to extends this list of parameters.\n </string>
	<string name="pref_dir">Directories</string>
	<string name="pref_dir_export">Export files directory</string>
	<string name="pref_dir_import">Import files directory</string>
	<string name="pref_dir_main">Main Tabulae directory</string>
</resources>