<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item
		android:id="@+id/tracks"
		android:icon="@android:drawable/ic_menu_directions"
		android:title="@string/menu_tracks"
		/>
	<item
		android:id="@+id/menu_show_dashboard"
		android:icon="@android:drawable/ic_menu_view"
		android:title="@string/menu_show_dashboard"
		/>
	<item
		android:id="@+id/poilist"
		android:icon="@android:drawable/ic_menu_myplaces"
		android:title="@string/menu_poilist"
		/>
	<item
		android:id="@+id/mapselector"
		android:icon="@android:drawable/ic_menu_mapmode"
		android:title="@string/menu_mapselector"
		>
		<menu>
			<group
				android:id="@+id/menu_group_maps"
				android:menuCategory="container"
				/>
		</menu>
	</item>
	<item
		android:id="@+id/settings"
		android:icon="@android:drawable/ic_menu_preferences"
		android:title="@string/menu_settings"
		/>
	<item
		android:id="@+id/area_selector"
		android:icon="@android:drawable/ic_menu_info_details"
		android:title="@string/menu_area_selector"
		/>
	<item
		android:id="@+id/downloadprepared"
		android:title="@string/menu_downloadprepared"
		/>
	<item
		android:id="@+id/routes"
		android:title="@string/menu_routes"
		/>
	<item
		android:id="@+id/gpsstatus"
		android:title="@string/menu_gpsstatus"
		android:visible="false"
		/>
	<!-- item
		android:id="@+id/tools"
		android:icon="@android:drawable/ic_menu_preferences"
		android:title="@string/menu_tools"
		>
		<menu -->
			<item
				android:id="@+id/search"
				android:icon="@android:drawable/ic_menu_search"
				android:title="@string/menu_search"
				android:visible="false"
				/>
			<item
				android:id="@+id/compass"
				android:icon="@android:drawable/ic_menu_compass"
				android:title="@string/menu_compass"
				/>
			<item
				android:id="@+id/measure"
				android:title="@string/menu_measure"
				/>
			<item
				android:id="@+id/reload"
				android:title="@string/menu_reload"
				/>
			<item
				android:id="@+id/findthemap"
				android:title="@string/menu_findthemap"
				android:visible="false"
				/>
		<!-- /menu>
	</item -->
	<item
		android:id="@+id/mylocation"
		android:icon="@android:drawable/ic_menu_mylocation"
		android:title="@string/menu_mylocation"
		/>
	<item
		android:id="@+id/about"
		android:icon="@android:drawable/ic_menu_info_details"
		android:title="@string/menu_about"
		/>
	<item
		android:id="@+id/exit"
		android:title="@string/menu_exit"
		/>
</menu>
